...
                        coroutineScope.launch {
                            dateScrollState.scrollToItem(7, scrollOffset = -130)
                        }
                    },
                    enabled = confirmEnabled.value
                ) {
                    Text("OK")
                }
            },
            dismissButton = {
                TextButton(
                    onClick = {
                        viewModel.showDatePicker = false
...
